[package]
name = "sjl"
version = "0.7.0"
edition = "2024"
description = "Simple JSON Logger"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joswayski/sjl"
keywords = ["simple", "structured", "json", "logging", "logger"]

exclude = ["src/main.rs", "*.github/"]

[dependencies]
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
