[package]
name = "sjl"
version = "0.7.0"
edition = "2024"
description = "Simple JSON Logger"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joswayski/sjl"
keywords = ["simple", "structured", "json", "logging", "logger"]

exclude = ["src/main.rs", "*.github/"]

[dependencies]
chrono = "0.4.44"
crossbeam-queue = "0.3.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }


[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
perf = { level = "deny", priority = 1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

semicolon_if_nothing_returned = "allow"

cargo_common_metadata = "allow"
map_unwrap_or = { level = "deny", priority = 1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
trivially_copy_pass_by_ref = { level = "deny", priority = 1 }
needless_pass_by_value = { level = "deny", priority = 1 }
large_types_passed_by_value = { level = "deny", priority = 1 }
or_fun_call = { level = "deny", priority = 1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
indexing_slicing = "forbid"
string_slice = "forbid"
unwrap_used = "warn"
unwrap_in_result = "warn"
unreachable = "warn"
redundant_field_names = "allow"
use_self = "allow"
multiple_crate_versions = "allow"
unnecessary_semicolon = "allow"
inconsistent_struct_constructor = "allow"
